--- a/css-register/style.css
+++ b/css-register/style.css
@@ -6,7 +6,7 @@
     transition: .2s ease-in-out;
 }
 
-:root{
+:root {
     --colorMain: #00becd;
     --color1: #038a8f;
     --color2: #c1fdff;
@@ -15,11 +15,10 @@
     --coloricon: #00becd;
     --colorhover: #fff;
     --colorRes: #f5f5f5;
-    
 }
 
 
-.darkMode{
+.darkMode {
     --bg-color: #0f172a;
     --colorMain: #fff;
     --color1: #fff;
@@ -29,121 +28,102 @@
     --coloricon: #fff;
     --colorhover: #344155;
     --colorRes: #141d2c;
+
 }
 
 
-body{
+body {
     background-color: var(--bg-color);
 }
 
-html{
+html {
     scroll-behavior: smooth;
 }
 
-html::-webkit-scrollbar{
+html::-webkit-scrollbar {
     width: 0em;
 }
 
-body{
+body {
+    background-color: var(--bg-color);
+}
+
+.contenedor-carga {
+    background: linear-gradient(var(--bg-color), var(--bg-color))no-repeat center center;
+    width: 100%;
     height: 100vh;
-    background-color: var(--bg-color);
-}
-
-header{
-    width: 100%;
-    height: 15.22vh;
-    background-color: var(--bg-color);
-}
-
-navbar {
-    width: 100%;
-    height: 15.22vh;
+    position: fixed;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    z-index: 2000;
+    transition: 1s ease-in;
 }
 
-.flexLogo {
-    width: 50%;
-    height: 15.22vh;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
+.custom-loader {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background:
+        radial-gradient(farthest-side, #00becd 94%, #0000) top/16px 16px no-repeat,
+        conic-gradient(#0000 30%, #00becd);
+    -webkit-mask: radial-gradient(farthest-side, #0000 calc(100% - 16px), #000 0);
+    animation: s3 1s infinite linear;
 }
 
-.flexLogo a{
-    width: 40%;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-}
-
-.flexLogo a img {
-    max-width: 100%;
-    margin: 0 0 0 5em;
+@keyframes s3 {
+    100% {
+        transform: rotate(1turn)
+    }
 }
 
 .nav-main {
-    width: 50%;
+    width: 100%;
     height: 15.22vh;
     display: flex;
-    justify-content: center;
+    justify-content: right;
     align-items: center;
 }
 
-
-.nav-main ul{
+.nav-main ul {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
+    margin: 0 1em 0 0;
 }
 
 .nav-main ul li {
-    display: inline;
+    list-style: none;
 }
 
-.nav-main ul li a{
-    transition: .2s ease-in-out;
-    color: var(--colorMain);
+.nav-main ul li a {
+    padding: .5em .8em;
+    margin: 0 .5em;
     border-radius: 1em;
+    color: var(--color1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-weight: 500;
-    padding: .5em .7em;
-    text-decoration: none;
+    font-size: 1em;
+}
+
+.nav-main ul li a i {
+    margin: 0 .5em 0 0;
 }
 
 
 .nav-main ul li a:hover {
     color: var(--color3);
-    text-decoration: none;
+    background-color: var(--coloricon);
     font-size: 1.1em;
-    transition: .2s ease-in-out;
-    padding: .5em .7em;
-    background-color: var(--colorMain);
 }
 
-.nav-main .nav-menu li a i{
-    margin: 0 2vh 0 0;
-}
-
-#darkMode-icon{
-    cursor: pointer;
-    font-size: 2em;
-    color: var(--coloricon);
-    transition: 1s ease-in-out;
-    margin: 0 2vh;
-}
-.nav-toggle{
-    background-color: transparent;
-    display: none;
-    border: none;
-    outline: none;
-    cursor: pointer;
-}
-#menu-right-icon{
-    font-size: 2em;
-    color: var(--coloricon);
-    transition: 1s ease-in-out;
+.btns-nav {
+    margin: 0 3em 0 0;
+    color: var(--color1);
+    font-size: 1.7em;
+    box-shadow: none;
 }
 
 .flexbox{
